# ndx-hed

./: .codespellrc  .gitignore  .readthedocs.yaml  CHANGELOG.md  DEFINITION_TESTS_SUMMARY.md  LICENSE.txt  NEXTSTEPS.md  PROJECT_REVIEW_SUMMARY.md  README.md  RELEASE_GUIDE.md  RELEASE_PREP_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  VALIDATION_REFACTOR_SUMMARY.md  _version.py  lychee.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-min.txt  setup.py  test_definitions.py  test_simple.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: check_external_links.yml  codespell.yml  docs.yml  links.yaml  ruff.yml  run_all_tests.yml  run_coverage.yml  run_single_test.yml  typos.yaml
constraints/: minimum.txt  pinned.txt
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  conf_doc_autogen.py  credits.rst  description.rst  format.rst  hed_validation.md  index.rst  release_notes.rst
examples/: 01_basic_hed_classes.py  02_trials_with_hed.py  03_events_table_integration.py  04_bids_conversion.py  05_hed_validation.py  06_complete_workflow.py  07_hed_definitions.py  08_advanced_integration.py  README.md  run_all_examples.py
spec/: ndx-hed.extensions.yaml  ndx-hed.namespace.yaml
src/pynwb/: README.md
src/pynwb/ndx_hed/: __init__.py  hed_annotations.py  hed_lab metadata.py  hed_lab_metadata.py  hed_tags.py  hed_version.py  hed_version1.py  hed_version_attr.py
src/pynwb/ndx_hed/utils/: bids2nwb.py  hed_nwb_validator.py  table_validator.py
src/pynwb/tests/: test_bids2nwb.py  test_hed_annotations.py  test_hed_lab_metadata.py  test_hed_nwb_file_validator.py  test_hed_nwb_validator.py  test_hed_tags.py  test_hed_version.py  test_hed_version1.py  test_hed_version_attr.py  test_tetrodeseries.py
src/pynwb/utils/: bids2nwb.py
src/pynwb/validators/: table_validator.py
src/spec/: create_extension_spec.py
