[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ndx-hed"
dynamic = ["version"]
authors = [
    { name="Kay Robbins", email="kay.robbins@utsa.edu" },
    { name="Ryan Ly", email="rly@lbl.gov" },
    { name="Oliver Ruebel", email="oruebel@lbl.gov" },
    { name="Ian Callanan", email="ianrcallanan@gmail.com"}
]
description = "NWB extension for HED data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
]
keywords = [
    'NeurodataWithoutBorders',
    'NWB',
    'nwb-extension',
    'ndx-extension',
]
dependencies = [
    "pynwb>=2.8.2",
    "hdmf>=3.14.1",
    "hedtools>=0.7.1",
    "ndx-events>=0.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-subtests>=0.12.0",
    "coverage>=7.5.4",
    "python-dateutil>=2.8.2",
]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-subtests>=0.12.0",
    "coverage>=7.5.4",
    "python-dateutil>=2.8.2",
    "ruff>=0.8.0",
    "typos>=1.29.0",
    "pre-commit>=3.5.0",
    "mdformat-myst>=0.1.5",
]
docs = [
    "sphinx>=7.4.7,<9.0",
    "sphinx-book-theme>=1.1.3",
    "sphinx-design>=0.6.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autodoc-typehints>=2.3.0",
    "myst-parser>=3.0.1",
    "hdmf-docutils>=0.4.7",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[project.urls]
"Homepage" = "https://github.com/hed-standard/ndx-hed"
"Documentation" = "https://www.hedtags.org/ndx-hed"
"Bug Tracker" = "https://github.com/hed-standard/ndx-hed/issues"
"Discussions" = "https://github.com/orgs/hed-standard/discussions"
"Changelog" = "https://github.com/hed-standard/ndx-hed/CHANGELOG.md"

[tool.hatch.build]
include = [
    "src/pynwb",
    "spec/ndx-hed.extensions.yaml",
    "spec/ndx-hed.namespace.yaml",
]
exclude = [
    "src/pynwb/tests",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/pynwb/ndx_hed",
    "spec"
]

[tool.hatch.build.targets.wheel.sources]
"spec" = "ndx_hed/spec"

[tool.hatch.build.targets.sdist]
include = [
    "src/pynwb",
    "spec/ndx-hed.extensions.yaml",
    "spec/ndx-hed.namespace.yaml",
    "docs",
]
exclude = []

[tool.pytest.ini_options]
# addopts = "--cov --cov-report html"

[tool.typos.files]
extend-exclude = [
    "htmlcov",
    ".mypy_cache",
    ".pytest_cache",
    ".coverage",
    "*.pdf",
    "*.svg",
    "venvs",
    ".tox",
    "hdmf-common-schema",
    "docs/_build",
    "*.ipynb",
    "deprecated",
    "*.xml",
    "*.mediawiki",
    "*.omn",
]

[tool.typos.default.extend-words]
assertIn = "assertIn"
hed = "hed"
parms = "parms"
covert = "covert"
recuse = "recuse"
disjointness = "disjointness"
seperate = "seperate"

[tool.coverage.run]
branch = true
source = ["src/pynwb"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
  ".git",
  ".mypy_cache",
  ".tox",
  ".venv",
  "venv",
  "__pycache__",
  ".ipynb_checkpoints",
  "_build/",
  "build/",
  "dist/",
  "__pypackages__",
  "*.ipynb",
  "docs/",
  ".status",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "T100",  # debugger
    "T201",  # print
    "T203",  # pprint
    "N",     # pep8-naming
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "N802",   # Function name should be lowercase
    "N803",   # Argument name should be lowercase
    "N806",   # Variable in function should be lowercase
    "SIM108", # if-else-block-instead-of-if-exp
    "SIM105", # suppressible-exception
    "SIM118", # in-dict-keys
    "SIM102", # collapsible-if
    "SIM103", # needless-bool
    "SIM110", # reimplemented-builtin
    "SIM101", # duplicate-isinstance-call
    "UP007",  # Use X | Y for Union types
    "UP008",  # Use super() without parameters
    "UP031",  # Use format strings over %-formatting
    "UP028",  # yield in for loop
    "UP045",  # Use X | None for Optional
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/spec/create_extension_spec.py" = ["T201"]
"src/pynwb/ndx_hed/__init__.py" = ["E402"]
"examples/*" = ["T201"]

[tool.ruff.lint.mccabe]
max-complexity = 17

[tool.ruff.lint.isort]
known-first-party = ["ndx_hed"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = true
